--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,24 @@
+/* 1. Base font stacks */
+:root {
+  --body-font: 'Merriweather', serif;
+  --heading-font: 'Montserrat', sans-serif;
+}
+
+/* 2. Apply to body and headings */
+body {
+  font-family: var(--body-font);
+  font-weight: 400;
+  line-height: 1.6;
+  color: #222;
+}
+
+h1, h2, h3, h4, h5, h6, .logo {
+  font-family: var(--heading-font);
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+
 * { margin:0; padding:0; box-sizing:border-box; }
 body { font-family:sans-serif; line-height:1.5; padding:1rem; }
 header { display:flex; justify-content:space-between; margin-bottom:2rem; }
